--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,18 @@
 {
   "env": {
     "node": true,
-    "es2021": true
+    "es2021": true,
+    "browser": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "prettier"],
   "parserOptions": {
-    "ecmaVersion": 12,
+    "ecmaVersion": 2021,
     "sourceType": "module"
   },
   "rules": {
-    "indent": ["error", 2],
-    "linebreak-style": ["error", "windows"],
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
     "no-console": "off",
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
-  }
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "prettier/prettier": "error"
+  },
+  "plugins": ["prettier"]
 }
