--- a/package.json
+++ b/package.json
@@ -1,35 +1,60 @@
 {
-  "name": "@votre-nom/logcolor",
-  "version": "1.0.0",
-  "description": "Une bibliothèque simple pour ajouter des couleurs aux logs de la console Node.js",
-  "main": "LogColor.js",
+  "name": "chromalogger",
+  "version": "1.1.1",
+  "description": "A colorful and flexible console logger for Node.js with CLI support",
+  "main": "chromalog.js",
   "type": "module",
+  "bin": {
+    "clog": "./cli.js"
+  },
   "scripts": {
     "test": "node test.js",
+    "test:watch": "nodemon --watch chromalog.js --watch test.js --exec \"npm test\"",
     "lint": "eslint .",
-    "prepublishOnly": "npm test && npm run lint"
+    "test:chroma": "node chromatest.js",
+    "test:cli": "node clitest.js",
+    "test:all": "npm run test && npm run test:chroma && npm run test:cli",
+    "format": "prettier --write .",
+    "fix": "eslint --fix .",
+    "coverage": "c8 npm test"
   },
   "keywords": [
     "log",
     "color",
     "console",
     "logger",
-    "nodejs"
+    "chroma",
+    "clog",
+    "nodejs",
+    "browser",
+    "ansi",
+    "terminal",
+    "styling",
+    "formatting"
   ],
-  "author": "Votre Nom <votre@email.com>",
+  "author": {
+    "name": "Orssi Mp",
+    "email": "orssimpiere5@gmail.com",
+    "url": "https://github.com/OrssiMp/chromalogger#readme"
+  },
   "license": "MIT",
+  "homepage": "https://github.com/OrssiMp/chromalogger#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/votre-utilisateur/logcolor.git"
+    "url": "git+https://github.com/OrssiMp/chromalogger.git"
   },
   "bugs": {
-    "url": "https://github.com/votre-utilisateur/logcolor/issues"
+    "url": "https://github.com/OrssiMp/chromalogger/issues"
   },
-  "homepage": "https://github.com/votre-utilisateur/logcolor#readme",
   "engines": {
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.0.0"
+    "c8": "^10.1.3",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.3"
   }
 }
