--- a/package.json
+++ b/package.json
@@ -12,15 +12,7 @@
     "chromalog.js"
   ],
   "scripts": {
-    "test": "node test.js",
-    "test:watch": "nodemon --watch chromalog.js --watch test.js --exec \"npm test\"",
-    "lint": "eslint .",
-    "test:chroma": "node chromatest.js",
-    "test:cli": "node clitest.js",
-    "test:all": "npm run test && npm run test:chroma && npm run test:cli",
-    "format": "prettier --write .",
-    "fix": "eslint --fix .",
-    "coverage": "c8 npm test"
+    "test": "node demo.js"
   },
   "keywords": [
     "log",
@@ -52,13 +44,5 @@
   },
   "engines": {
     "node": ">=12.0.0"
-  },
-  "devDependencies": {
-    "c8": "^10.1.3",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "nodemon": "^3.1.11",
-    "prettier": "^3.7.3"
   }
 }
