--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Local development
 ideas/
+docs/
 
 # Node.js
 node_modules/
@@ -15,6 +16,7 @@ coverage/
 # IDE
 .vscode/
 ideas/
+.docs/
 *.swp
 *.swo
 
