--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "chromalogger",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A colorful and flexible console logger for Node.js with CLI support",
   "main": "index.js",
+  "browser": "chromalog.browser.js",
   "type": "module",
   "files": [
     "index.js",
-    "chromalog.js"
+    "chromalog.js",
+    "chromalog.browser.js"
   ],
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "test": "node demo.js"
   },
