--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
-    "test": "node demo.js"
+    "test": "node ./ideas/demo.js"
   },
   "keywords": [
     "log",
